# music-driven-worldbuilding

./: README.md  setup.bat
HDRITemplateApp/: HDRITemplateApp.uproject
HDRITemplateApp/Config/: DefaultEngine.ini  DefaultGame.ini
HDRITemplateApp/Content/Custom/BluePrints/: BP_MusicNiagara.uasset
HDRITemplateApp/Content/Custom/Materials/: M_Aurora.uasset  M_Aurora_Inst.uasset  M_Glass_Inst.uasset  M_ParticleColour.uasset  M_ParticleColour_Inst.uasset
HDRITemplateApp/Content/Custom/Meshes/: AuroraMaterial.uasset
HDRITemplateApp/Content/Custom/Niagara/: NS_MusicAurora.uasset  NS_MusicGalaxy.uasset
HDRITemplateApp/Content/StarterContent/Architecture/: Floor_400x400.uasset
HDRITemplateApp/Content/VRTemplate/Maps/: VRTemplateMap.umap  VRTemplateMap_BuiltData.uasset
flask-app/: app.py  pyproject.toml
flask-app/templates/: hdri.html  main.html  music.html
