[project]
name = "flask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers==0.34.0",
    "einops>=0.8.2",
    "faiss-cpu>=1.14.3",
    "flask>=3.1.3",
    "ftfy>=6.3.1",
    "omegaconf>=2.3.1",
    "opencv-python>=5.0.0.93",
    "openexr>=3.4.13",
    "psutil>=7.2.2",
    "scipy>=1.17.1",
    "setuptools==81",
    "termcolor>=3.3.0",
    "transformers==4.28.0",
]
